[package]
name = "pywavers"
version = "0.1.0"
edition = "2021"
authors = ["Jack Geraghty (jmg049)"]
description = "A mixed Rust and Python crate/package for reading and writing WAVE files. Exposes the Rust crate Wavers to Python."
readme = "./README.md"
license = "MIT"
repository = "https://github.com/jmg049/PyWavers/"
documentation = "https://docs.rs/pywavers/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pywavers"
crate-type = ["rlib", "cdylib"]

[dependencies]
ndarray = "0.15.6"
numpy = "0.18.0"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
wavers = "0.1.0"
