[package]
name = "pywavers"
version = "0.1.1"
edition = "2021"
authors = ["Jack Geraghty (jmg049)"]
description = "A mixed Rust and Python crate/package for reading and writing WAVE files. Exposes the Rust crate Wavers to Python."
readme = "./README.md"
license = "MIT"
repository = "https://github.com/jmg049/PyWavers/"
documentation = "https://docs.rs/pywavers/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pywavers"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
ndarray = "0.15.6"
numpy = "0.20.0"
paste = "1.0.14"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
wavers = { version="1.3.0", features = ["ndarray", "pyo3", "colored"] }
